[gd_scene load_steps=2 format=3 uid="uid://dik20b2oxropt"]

[ext_resource type="Script" path="res://Scenes/UI/round_end_panel.gd" id="1_46kyy"]

[node name="RoundEndPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46kyy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBoxContainer" groups=["round end"]]
unique_name_in_owner = true
layout_mode = 2

[node name="RetryButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
